fix: mature tags in dark mode

--- a/src/ui/scss/component/_badge.scss
+++ b/src/ui/scss/component/_badge.scss
@@ -31,4 +31,8 @@
   svg {
     stroke: $lbry-black;
   }
+
+  [data-mode='dark'] & {
+    background-color: rgba($lbry-grape-1, 0.3);
+  }
 }
